hack/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo-one
  labels:
    app: http-echo-one
spec:
  replicas: 3
  selector:
    matchLabels:
      app: http-echo-one
  template:
    metadata:
      labels:
        app: http-echo-one
    spec:
      containers:
        - name: http-echo-one
          image: jmalloc/echo-server
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo-one
  labels:
    isMefiRemote: "true"
spec:
  selector:
    app: http-echo-one
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo-two
  labels:
    app: http-echo-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: http-echo-two
  template:
    metadata:
      labels:
        app: http-echo-two
    spec:
      containers:
        - name: http-echo-two
          image: jmalloc/echo-server
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo-two
  labels:
    isMefiRemote: "true"
spec:
  selector:
    app: http-echo-two
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo-three
  labels:
    app: http-echo-three
spec:
  replicas: 3
  selector:
    matchLabels:
      app: http-echo-three
  template:
    metadata:
      labels:
        app: http-echo-three
    spec:
      containers:
        - name: http-echo-three
          image: jmalloc/echo-server
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo-three
  labels:
    isMefiRemote: "true"
spec:
  selector:
    app: http-echo-three
  ports:
    - protocol: TCP
      port: 8092
      targetPort: 8080
